--- a/.env.dev
+++ b/.env.dev
@@ -3,7 +3,7 @@ KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DATABASE_USER=root
 DATABASE_PASSWORD=root
 DB_PORT=3306
